# HumanFacialDNA

./: .gitmodules  CMakeLists.txt  InSightDemo.nsi  compile.bat  setenv.bat
cmake/: demo_version.h.in  sources.cmake
cmake/modules/: FindQWT.cmake
resources/icons/: thirdsight.icns
src/: example.cpp  face-demo.cpp  gaze-demo.cpp  gaze.cpp
